--- a/inutilizavel.css
+++ b/inutilizavel.css
@@ -56,3 +56,25 @@
     float: left;
     margin-left: 10px;
 }
+
+#fis{
+    text-align: center;
+    border: 1px solid black;
+    float: left;
+    margin-left: 10px;
+}
+
+#qui{
+    text-align: center;
+    border: 1px solid black;
+    float: left;
+    margin-left: 10px;
+}
+
+#bi{
+    text-align: center;
+    border: 1px solid black;
+    float: left;
+    margin-left: 10px;
+}
+
